# artwork

debian/: changelog  control
qvd-desktop-artwork/: AUTHORS  ChangeLog  Makefile.am  configure.ac
qvd-desktop-artwork/desktop/: Makefile.am  Makefile.in
qvd-desktop-artwork/desktop/.config/xfce4/desktop/: icons.screen0-1008x672.rc
qvd-desktop-artwork/desktop/.config/xfce4/xfconf/xfce-perchannel-xml/: xfce4-desktop.xml  xsettings.xml
qvd-desktop-artwork/desktop/config/xfce4/panel/launcher-13/: 14008420458.desktop
qvd-desktop-artwork/desktop/config/xfce4/xfconf/xfce-perchannel-xml/: xfce4-panel.xml  xfwm4.xml
qvd-desktop-artwork/wallpapers/: Makefile.am  Makefile.in
