#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([qvd-desktop-artwork], [0.01], [qvd@qindel.com])
AC_CONFIG_FILES([Makefile wallpapers/Makefile desktop/Makefile])


# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT


AM_INIT_AUTOMAKE([qvd-desktop-artwork], [0.01]) 
